Trying to avoid breaking label on small screens.

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -27,6 +27,10 @@ h1 {
   font-weight: bold;
 }
 
+.text-nowrap {
+  white-space: nowrap;
+}
+
 // Company Info
 
 .company {
